fix ticket tailor with no padding on small screen

--- a/sass/base/global.scss
+++ b/sass/base/global.scss
@@ -71,6 +71,12 @@ section {
     &#about, &#events, &#gallery, &#getinvolved {
         padding-top: 6vw;
     }
+    &#tickets {
+        @media (max-width: 400px) {
+            padding-right: 0;
+            padding-left: 0;
+        }
+    }
     &:nth-of-type(1) .tab {
             @include min-width(750px) {
             display: inline;
